fixed bug with tech icon hover logic; finalized project 1 features and lesson learnt; adjusted feature spacing; added six feature icons

--- a/assets/styles/modules/_feature.css
+++ b/assets/styles/modules/_feature.css
@@ -17,7 +17,8 @@
   }
 
   &__item--icon {
-    padding-left: 3.25em;
+    padding-left: 3.375em;
+    padding-top: 0.3em;
   }
 
   &__item--iconless {
@@ -28,15 +29,21 @@
     display: block;
     position: absolute;
     left: 0;
-    width: 2.125em;
-    height: 2.125em;
+    top: 0;
+    width: 2.5em;
+    height: 2.5em;
+    stroke-width: 1.5;
+    stroke-linecap: round; 
+    stroke-linejoin: round;
+    stroke: $mainOrange;
+    fill: none;
   }
 
   &__title {
     font-size: 1.125rem;
     font-weight: 600;
     text-align: left;
-    margin: 0.4em 0;
+    margin: 0 0 0.4em 0;
     color: $mainGrey;
     @mixin atSmall {
       font-size: 1.375rem;
